# sparse_grid

./: README.md  pyproject.toml
sparse_grid/: __init__.py  bliss.py  distance.py  grid.py  metric.py  util.py
