[tool.poetry]
name = "sparse-grid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sparse_grid"}]

[tool.poetry.dependencies]
python = "^3.11"
python-sat = "^0.1.8.dev7"
networkx = "^3.1"
more-itertools = "^9.1.0"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
